--- a/index.html
+++ b/index.html
@@ -47,14 +47,9 @@
           <img src="linkedin.svg" alt="">
         </figure>
       </a>
-      <a href="https://www.youtube.com/user/r12624" target="_blank">
+      <a href="https://r12624.blogspot.com/" target="_blank">
         <figure>
-          <img src="youtube.svg" alt="">
-        </figure>
-      </a>
-      <a href="https://r12624.wordpress.com" target="_blank">
-        <figure>
-          <img src="wordpress.svg" alt="">
+          <img src="blogger.svg" alt="">
         </figure>
       </a>
     </nav>
