--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
           <img src="facebook.svg" alt="">
         </figure>
       </a>
-      <a href="https://pt.linkedin.com/in/r12624" target="_blank">
+      <a href="https://www.linkedin.com/in/r12624" target="_blank">
         <figure>
           <img src="linkedin.svg" alt="">
         </figure>
       </a>
-      <a href="https://r12624.blogspot.com/" target="_blank">
+      <a href="https://r12624.blogspot.com" target="_blank">
         <figure>
           <img src="blogger.svg" alt="">
         </figure>
